--- a/beliccia-api/.env
+++ b/beliccia-api/.env
@@ -1,10 +1,10 @@
-PORT=4000
+PORT=
 
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
+DB_HOST=
+DB_PORT=
+DB_USER=
 DB_PASSWORD=
-DB_NAME=beliccia
+DB_NAME=
 
-JWT_SECRET=beliccia_secret_Key_2026!
-JWT_EXPIRES_IN=1h
+JWT_SECRET=
+JWT_EXPIRES_IN=
