--- a/beliccia-api/.env
+++ b/beliccia-api/.env
@@ -1,5 +1,14 @@
 PORT=4000
 
+########Base de Datos(ionos)#########
+#DB_HOST=db5019105974.hosting-data.io
+#DB_PORT=3306
+#DB_USER=dbu3455325
+#DB_PASSWORD=Beliccia.dresscode_02/2025!
+#DB_NAME=dbs15020248
+
+########Base de Datos(Local)#########
+
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
