--- a/beliccia-api/package.json
+++ b/beliccia-api/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "stripe": "^20.0.0"
   }
 }
