--- a/beliccia-api/package.json
+++ b/beliccia-api/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.22.1",
     "express-async-errors": "^3.1.1",
+    "google-auth-library": "^10.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
