--- a/beliccia-api/package.json
+++ b/beliccia-api/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
+    "nodemailer": "^7.0.11",
     "slugify": "^1.6.6",
     "stripe": "^20.0.0"
   }
